--- a/themes/enertec/assets/styles/enertec.scss
+++ b/themes/enertec/assets/styles/enertec.scss
@@ -51,7 +51,7 @@ p {
     font-family: $detailFont;
 }
 
-.c-title__subtitle{
+.c-title__subtitle {
     color: $colorBlue;
     font-size: $contentFontSizeBigger;
 }
@@ -501,11 +501,61 @@ Sections
                 font-size: $contentFontSizeBigger;
             }
 
-            &:nth-child(even){
+            &:nth-child(even) {
                 margin-left: 40px;
             }
         }
     }
+}
+
+.c-section--bg-shape-inverted {
+    position: relative;
+    background: url('/wp-content/themes/enertec/dist/img/bg-benefits.png') no-repeat;
+    background-size: cover;
+    color: white;
+
+    .c-benefits{
+        margin-top: 40px;
+
+        .c-benefit{
+            position: relative;
+            padding: 50px 20px 20px;
+            height: 100%;
+            background: white;
+            color: $colorBlack;
+            border-radius: 10px;
+    
+            img{
+                position: absolute;
+                top: -29px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+    
+            &:before, &:after{
+                content: '';
+                position: absolute;
+                left: 50%;
+                background: $gradientHorizontal;
+                border-radius: 20px;
+                transform: translateX(-50%);
+            }
+    
+            &:before{
+                top: -2px;
+                height: 4px;
+                width: 70%;
+            }
+    
+            &:after{
+                bottom: 0;
+                height: 5px;
+                width: 50%;
+            }
+        }
+    }
+    
+
 }
 
 /*-------------------------------------------------------------------
