--- a/themes/enertec/assets/styles/enertec.scss
+++ b/themes/enertec/assets/styles/enertec.scss
@@ -171,6 +171,10 @@ General
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 html,
 body {
     overflow-x: hidden;
@@ -306,9 +310,9 @@ Header
             overflow: hidden;
         }
 
-            .c-header__logo img {
-                max-height: 60px;
-            }
+        .c-header__logo img {
+            max-height: 60px;
+        }
     }
 
 }
