Add active functionality to anchor links

--- a/themes/enertec/assets/styles/enertec.scss
+++ b/themes/enertec/assets/styles/enertec.scss
@@ -291,7 +291,7 @@ Header
                 }
 
                 &:hover,
-                &:focus {
+                &:focus, &.active {
                     color: $colorBlue;
 
                     &:before {
