--- a/themes/enertec/assets/styles/enertec.scss
+++ b/themes/enertec/assets/styles/enertec.scss
@@ -197,7 +197,7 @@ body {
     font-family: $mainFont;
 }
 
-:focus{
+:focus {
     outline: none;
 }
 
@@ -649,7 +649,7 @@ form {
     border-radius: 10px;
     box-shadow: $shadow;
 
-    &.submiting{
+    &.submiting {
         pointer-events: none;
     }
 
@@ -812,25 +812,32 @@ Services
 /*-------------------------------------------------------------------
 Instagram
 -------------------------------------------------------------------*/
-.elfsight-widget-instagram-feed {
+#sb_instagram {
     margin-top: 35px;
 }
 
-.eapps-instagram-feed-posts-grid-load-more {
-    display: none;
-}
 
-#eapps-instagram-feed-1 .eapps-instagram-feed-posts-item-overlay {
-    background: linear-gradient(90deg, #03e944c2, #19e7d1bd) !important;
-}
+.sbi_photo {
+    position: relative;
 
-.eapps-instagram-feed-posts-item-link:hover .eapps-instagram-feed-posts-item-media:after,
-.eapps-instagram-feed-posts-item-link:focus .eapps-instagram-feed-posts-item-media:after {
-    opacity: 1;
-}
+    &:before {
+        @extend %transition;
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background: linear-gradient(90deg, #03e944c2, #19e7d1bd) !important;
+        opacity: 0;
+    }
 
-.eapps-instagram-feed-posts-item-image {
-    filter: none !important;
+    &:hover,
+    &:focus {
+        &:before {
+            opacity: 1;
+        }
+    }
 }
 
 /*-------------------------------------------------------------------
@@ -893,12 +900,13 @@ Responsive
 
 @media(max-width: 1024px) {
     .c-header {
-        &:not(.sticky) .c-header__bottom .c-nav__link{
+        &:not(.sticky) .c-header__bottom .c-nav__link {
             margin-left: 40px !important;
         }
+
         .c-header__bottom {
             .c-header__mobile-menu {
-                
+
                 display: block;
                 padding: 8px;
                 box-shadow: $shadow;
@@ -906,15 +914,15 @@ Responsive
                 cursor: pointer;
                 transition: all 300ms;
 
-                &.active{
+                &.active {
                     background: $gradientHorizontal;
 
-                    img{
+                    img {
                         filter: brightness(0) invert(1);
                     }
                 }
 
-                &.active + .c-nav{
+                &.active+.c-nav {
                     opacity: 1;
                     pointer-events: visible;
                 }
@@ -967,74 +975,77 @@ Responsive
         width: 33.33%;
     }
 
-    .c-contact .c-nav__link, .c-footer .c-nav__link{
-        img{
+    .c-contact .c-nav__link,
+    .c-footer .c-nav__link {
+        img {
             display: block;
             margin: 0 auto 10px auto !important;
         }
     }
 
-    .c-title{
-        &.c-title--decoration{
-            &:before{
-               margin-right: auto;
-               margin-left: auto;
+    .c-title {
+        &.c-title--decoration {
+            &:before {
+                margin-right: auto;
+                margin-left: auto;
             }
         }
     }
 
-    .c-explanation__step:nth-child(even){
+    .c-explanation__step:nth-child(even) {
         margin-left: 0 !important;
 
     }
 
-    .c-section--shape-bg{
+    .c-section--shape-bg {
         margin-top: -60px;
     }
 
-    .c-section--bg-shape-inverted{
+    .c-section--bg-shape-inverted {
         margin-bottom: -90px;
 
-        .c-benefits .l__col-2-4{
+        .c-benefits .l__col-2-4 {
             margin-bottom: 20px;
         }
     }
-    
-    .c-services .l__col-4:not(:last-of-type){
+
+    .c-services .l__col-4:not(:last-of-type) {
         margin-bottom: 40px;
     }
 }
 
-@media(max-width: 650px){
-    .c__mobile-full{
+@media(max-width: 650px) {
+    .c__mobile-full {
         display: block;
     }
 
-    .c-signature{
+    .c-signature {
         margin-top: 10px;
     }
 }
 
-@media(max-width: 572px){
-    .c-header__top, .c-header .c__button{
-        display: none;
-    } 
+@media(max-width: 572px) {
 
-    .c-section--video-bg{
+    .c-header__top,
+    .c-header .c__button {
+        display: none;
+    }
+
+    .c-section--video-bg {
         margin-top: 112px;
     }
 
-    .c-header:not(.sticky) .c-header__bottom .c-nav__link{
+    .c-header:not(.sticky) .c-header__bottom .c-nav__link {
         margin-left: 0 !important;
     }
 }
 
-@media(max-width: 478px){
-    .l__col-4{
+@media(max-width: 478px) {
+    .l__col-4 {
         width: 100%;
     }
 
-    .l__col-2-4{
+    .l__col-2-4 {
         width: 50%
     }
 }
